--- a/gh-pages/src/_includes/default.html
+++ b/gh-pages/src/_includes/default.html
@@ -45,6 +45,7 @@
           <li><a href="/">Baseline</a></li>
           <li><a href="/web-features/">web-features</a></li>
           <li><a href="/webdx-cg/">WebDX Community Group</a></li>
+          <li><a href="/lookup/">Lookup Baseline status</a></li>
           <li><a href="/use-baseline/">Baseline in your project</a></li>
           <li><a href="/name-and-logo-usage-guidelines/">Name and logo usage guidelines</a></li>
           <li><a href="/baseline-in-the-wild/">Baseline in the wild</a></li>
