--- a/gh-pages/src/assets/css/style.css
+++ b/gh-pages/src/assets/css/style.css
@@ -342,3 +342,15 @@ table.logos img {
 table.logos img.dark-bg {
   background-color: black;
 }
+
+label {
+  display: block;
+}
+
+select {
+  width: 100%;
+}
+
+baseline-status {
+  margin-top: 2em;
+}
