Adds compatible tools page

--- a/gh-pages/src/_includes/default.html
+++ b/gh-pages/src/_includes/default.html
@@ -47,6 +47,7 @@
         <li><a href="/">Baseline</a></li>
         <li><a href="/web-features/">web-features</a></li>
         <li><a href="/supported-browsers/">Supported browsers</a></li>
+        <li><a href="/compatible-tools/">Compatible tools</a></li>
         <li><a href="/webdx-cg/">WebDX Community Group</a></li>
         <li><a href="/use-baseline/">Baseline in your project</a></li>
         <li><a href="/name-and-logo-usage-guidelines/">Name and logo usage guidelines</a></li>
